sfdx/force-app/main/default/objects/skedConfigs__c/skedConfigs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Skedulo custom settings</description>
    <label>skedConfigs</label>
</CustomObject>