sfdx/force-app/main/default/objects/skedConfigs__c/fields/Default_Job_Duration__c.field-meta.xml
<CustomField>
    <fullName>Default_Job_Duration__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Default Job Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>