sfdx/force-app/main/default/objects/skedConfigs__c/fields/Default_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Job_Type__c</fullName>
    <label>Default Job Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>