sfdx/force-app/main/default/objects/skedConfigs__c/fields/End_Working_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Working_Time__c</fullName>
    <defaultValue>2400</defaultValue>
    <label>End Working Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>