sfdx/force-app/main/default/objects/skedConfigs__c/fields/Global_Job_URL__c.field-meta.xml
<CustomField>
    <fullName>Global_Job_URL__c</fullName>
    <defaultValue>&apos;/&apos;</defaultValue>
    <label>Global Job URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>