sfdx/force-app/main/default/objects/skedConfigs__c/fields/Minimum_Job_Duration__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Job_Duration__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Minimum Job Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>