sfdx/force-app/main/default/objects/skedConfigs__c/fields/Start_Working_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Working_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Start Working Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>